completed stretch goals of making nav fixed with opacity, and introduced CSS animations when hovering over nav items and images

--- a/css/index.css
+++ b/css/index.css
@@ -171,6 +171,9 @@ p {
   align-items: center;
   background: #F6F6F6;
   padding-top: 15px;
+  position: fixed;
+  width: 100vw;
+  opacity: 0.95;
 }
 .navHeader nav {
   display: flex;
@@ -188,6 +191,18 @@ p {
   padding: 10px 10px;
   margin: 0 5px;
 }
+@keyframes navEnlarge {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.4);
+  }
+}
+.navHeader nav a:hover {
+  animation: navEnlarge 0.5s;
+  transform: scale(1.4);
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
@@ -202,6 +217,12 @@ footer {
   width: 100%;
   height: auto;
   border-radius: 5px;
+  margin-top: 100px;
+}
+@media (max-width: 400px) {
+  .home .intro img {
+    margin-top: 137px;
+  }
 }
 .home .intro h2 {
   padding: 15px;
@@ -222,6 +243,18 @@ footer {
   height: 100%;
   border-radius: 20px;
   margin: 20px 2.5%;
+}
+@keyframes imgEnlarge {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(3);
+  }
+}
+.home .space-images img:hover {
+  animation: imgEnlarge 0.5s;
+  transform: scale(3);
 }
 @media (max-width: 500px) {
   .home .space-images img {
@@ -262,7 +295,7 @@ footer {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    padding: 20px 0px;
+    padding: 0px 0px;
   }
 }
 .home .walk .walk-text {
@@ -305,6 +338,18 @@ footer {
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@keyframes imgEnlarge {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(3);
+  }
+}
+.home .walk .walk-img:hover {
+  animation: imgEnlarge 0.5s;
+  transform: scale(3);
 }
 @media (max-width: 500px) {
   .home .walk .walk-img {
