--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,11 +1,15 @@
 // Home Content
 
 .home {
-
   .intro {
 
     img{
       .imageStyle(100%, auto, 5px);
+        margin-top: 100px;
+
+        @media (max-width: 400px){
+          margin-top: 137px;
+        }
     }
 
     h2 {
@@ -25,6 +29,7 @@
 
     img {
       .imageStyle(28%, 100%, 20px);
+      .enlargeOnHover(3.0, 0.5s, imgEnlarge);
 
       margin: 20px 2.5%;
 
@@ -67,7 +72,7 @@
     @media @phone{
       margin-top: 20px;
       .flex(column-reverse, center);
-      padding: 20px 0px;
+      padding: 0px 0px;
 
       // border: 1px solid black;
     }
@@ -105,6 +110,8 @@
     .walk-img {
       width: 46%;
       margin-left: 4%;
+
+      .enlargeOnHover(3.0, 0.5s, imgEnlarge);
 
       @media @phone{
         width: 92%;
