--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,6 +6,11 @@
     background: @nav-bg;
     padding-top: 15px;
 
+    position:fixed;
+    width: 100vw;
+    opacity: 0.95;
+    
+
     nav{
         .flex(row, center);
 
@@ -19,6 +24,8 @@
             
             padding: 10px 10px;
             margin: 0 5px;
+
+            .enlargeOnHover(1.4, 0.5s, navEnlarge);
         }
     }
 }
